try new travis ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,50 +1,50 @@
 language: php
 php:
-  - '7.3.5'
+  - '7.4snapshot'
+  - '7.3'
   - '7.2'
-  - '7.1'
-  - '7.0'
-  - '5.6'
+
+dist: bionic
 
 git:
-  depth: 1
-
-branches:
-  only:
-    - master
-    - /^3\.(4|5)\.(\d+|x)$/
+  depth: 5
+  quiet: true
 
 addons:
   apt:
     packages:
-      - beanstalkd
       - gdb
-      - lcov
+      - shellcheck
+      - libsodium-dev
+  postgresql: "9.4"
 
 matrix:
   fast_finish: true
+  allow_failures:
+    - php: '7.4snapshot'
+    - env: ZEPHIR_VERSION="development"
 
 cache:
   timeout: 604800
   directories:
-    - $HOME/.composer/cache
+    - ${HOME}/.composer/cache
 
 services:
-  - beanstalkd
+  - mysql
   - mongodb
   - redis-server
   - postgresql
-  - mysql
   - memcached
 
 env:
   global:
     - CC="gcc"
-    - ZEPHIR_VERSION="0.10.14"
-    - ZEPHIR_PARSER_VERSION="v1.1.4"
-    - BACKEND="ZendEngine3"
-    - PATH="$HOME/bin:$HOME/.composer/vendor/bin:$PATH"
+    - ZEPHIR_VERSION="0.12.11"
+    - ZEPHIR_PARSER_VERSION="v1.3.2"
+    - REPORT_COVERAGE=1
+    - PATH="${HOME}/.composer/vendor/bin:${PATH}"
     - TRAVIS_COMMIT_LOG="$(git log --format=fuller -5)"
+    - DEFAULT_COMPOSER_FLAGS="--no-interaction --no-ansi --no-progress --no-suggest"
 
 before_install:
   - |
@@ -57,46 +57,64 @@ before_install:
       echo 'Add Github token'
     fi
 
+    [ -d ~/bin ] || mkdir ~/bin
+    export PHP_PEAR_PHP_BIN="$(phpenv which php)"
+
+    if [ "$(php-config --vernum)" -ge "70400" ]
+    then
+      export DEFAULT_COMPOSER_FLAGS="$DEFAULT_COMPOSER_FLAGS --ignore-platform-reqs"
+    fi
+
     # Hide "You are in 'detached HEAD' state" message
     git config --global advice.detachedHead false
 
-    [ -d ~/bin ] || mkdir ~/bin
-    export DEFAULT_COMPOSER_FLAGS=("--no-interaction" "--no-ansi" "--no-progress" "--no-suggest")
-
-  - source ./tests/_ci/export-variables.sh
+  - source .ci/export-variables.sh
 
 install:
-  - ./tests/_ci/setup-dbs.sh
-  - ./tests/_ci/install-prereqs-$PHP_MAJOR.sh
-  - ./tests/_ci/install-zephir.sh
-  - travis_retry composer install ${DEFAULT_COMPOSER_FLAGS[*]}
+  - .ci/setup-dbs.sh
+  - .ci/install-zephir.sh
+  - .ci/install-php-extensions.sh
+  - eval "composer install $DEFAULT_COMPOSER_FLAGS"
 
 before_script:
-  - cat ./tests/_ci/travis.ini >> "$(phpenv prefix)/etc/conf.d/travis.ini"
-  - ./tests/_ci/build.sh
+  - cat .ci/travis.ini >> "$(phpenv prefix)/etc/conf.d/travis.ini"
+  - 'if [ "$(php-config --vernum)" -ge "70400" ]; then export REPORT_COVERAGE=0; fi'
+  - .ci/genparsers.sh
+  - .ci/build.sh
+  - zephir --version
 
 script:
   - vendor/bin/codecept build --quiet
+  - vendor/bin/codecept run --ext DotReporter tests/cli/
   - vendor/bin/codecept run --ext DotReporter tests/integration/
   - vendor/bin/codecept run --ext DotReporter tests/unit/
-  - vendor/bin/phpunit --bootstrap tests/_ci/phpunit.php unit-tests/
-  - ./tests/_ci/run-volt-tests.sh
+
+  - tests/run-syntax-tests.sh
 
 jobs:
   include:
+    - stage: Development Zephir version
+      php: '7.3'
+      env: ZEPHIR_VERSION="development"
     - stage: Static Code Analysis
       php: '7.2'
+      env:
+        - REPORT_COVERAGE=0
       install:
-        - travis_retry composer install ${DEFAULT_COMPOSER_FLAGS[*]} --ignore-platform-reqs
+        - eval "composer install $DEFAULT_COMPOSER_FLAGS --ignore-platform-reqs"
       before_script:
         - phpenv config-rm xdebug.ini || true
       script:
         - vendor/bin/phpcs
+        - shellcheck .ci/*.sh
 
 after_failure:
   - echo "$($(phpenv which php) -v)"
   - echo "$($(phpenv which php) -m)"
-  - ./tests/_ci/after-failure.sh
+  - .ci/after-failure.sh
+
+after_success:
+  - '[[ "$REPORT_COVERAGE" -eq 1 ]] && bash <(curl -s https://codecov.io/bash)'
 
 after_script:
   - printf "$TRAVIS_COMMIT_RANGE\n"
